add component card

--- a/index.html
+++ b/index.html
@@ -55,80 +55,125 @@
                     <input type="checkbox" id="format-liste">
                 </div>
                 <div class="grille-cartes">
-                    <article class="timbre">
-                        <div class="img-avec-favoris">
-                            <img class="timbre-image" src="#" alt="image d'un timbre">
-                            <input class="timbre-favoris" type="checkbox" name="favoris" id="favoris">
+                    <article class="carte">
+                        <div class="carte-img-avec-favoris">
+                            <img class="carte-timbre-image" src="assets/img/nicolas-timbre" alt="image d'un timbre">
+                            <!-- FIXME: faire intégration favoris avec label -->
+                            <input class="carte-timbre-favoris" type="checkbox" name="favoris" id="favoris">
                         </div>
-                        <div class="txt-enchere-ligne">
-                            <p class="timbre-status">Enchères en cours</p>
-                            <p class="timbre-lot">Lot n: 123456</p>
+                        <div class="carte-zone-txt">
+                            <div class="txt-enchere-ligne">
+                                <p class="timbre-status">Enchères en cours</p>
+                                <p class="timbre-lot">Lot n: 123456</p>
+                            </div>
+                            <div class="entete-enchere">
+                                <h3 class="timbre-titre">Nom du timbres</h3>
+                                <div>
+                                    <p class="timbre-annee">1850-1890</p>
+                                    <p class="timbre-etat">État : Neuf</p>
+                                </div>
+                            </div>
+                            <div class="txt-enchere-ligne">
+                                <p class="timbre-prix">650 $</p>
+                                <p class="timbre-temps-restant">3 jours 21 heures</p>
+                            </div>
+                            <form action="index.html">
+                                <label for="prix">
+                                    <input type="text" name="prix" id="prix" class="input-selection variante-bleu">
+                                </label>
+                                <input type="submit" value="save">
+                            </form>
                         </div>
-                        <div class="entete-enchere">
-                            <h3 class="timbre-titre">nom du timbres</h3>
-                            <p class="timbre-annee">1850-1890</p>
-                            <p class="timbre-etat">État : Neuf</p>
-                        </div>
-                        <div class="txt-enchere-ligne">
-                            <p class="timbre-prix">Prix actuel : </p>
-                            <p class="timbre-temps-restant">temps restant : </p>
-                        </div>
-                        <form action="index.html">
-                            <label for="prix">
-                                <input type="text" name="prix" id="prix">
-                            </label>
-                            <input type="submit" value="save">
-                        </form>
                     </article>
-                    <article class="timbre">
-                        <div class="img-avec-favoris">
-                            <img class="timbre-image" src="#" alt="image d'un timbre">
-                            <input class="timbre-favoris" type="checkbox" name="favoris" id="favoris">
+                    <article class="carte">
+                        <div class="carte-img-avec-favoris">
+                            <img class="carte-timbre-image" src="assets/img/nicolas-timbre" alt="image d'un timbre">
+                            <!-- FIXME: faire intégration favoris avec label -->
+                            <input class="carte-timbre-favoris" type="checkbox" name="favoris" id="favoris">
                         </div>
-                        <div class="txt-enchere-ligne">
-                            <p class="timbre-status">Enchères en cours</p>
-                            <p class="timbre-lot">Lot n: 123456</p>
+                        <div class="carte-zone-txt">
+                            <div class="txt-enchere-ligne">
+                                <p class="timbre-status">Enchères en cours</p>
+                                <p class="timbre-lot">Lot n: 123456</p>
+                            </div>
+                            <div class="entete-enchere">
+                                <h3 class="timbre-titre">Nom du timbres</h3>
+                                <div>
+                                    <p class="timbre-annee">1850-1890</p>
+                                    <p class="timbre-etat">État : Neuf</p>
+                                </div>
+                            </div>
+                            <div class="txt-enchere-ligne">
+                                <p class="timbre-prix">650 $</p>
+                                <p class="timbre-temps-restant">3 jours 21 heures</p>
+                            </div>
+                            <form action="index.html">
+                                <label for="prix">
+                                    <input type="text" name="prix" id="prix" class="input-selection variante-bleu">
+                                </label>
+                                <input type="submit" value="save">
+                            </form>
                         </div>
-                        <div class="entete-enchere">
-                            <h3 class="timbre-titre">nom du timbres</h3>
-                            <p class="timbre-annee">1850-1890</p>
-                            <p class="timbre-etat">État : Neuf</p>
-                        </div>
-                        <div class="txt-enchere-ligne">
-                            <p class="timbre-prix">Prix actuel : </p>
-                            <p class="timbre-temps-restant">temps restant : </p>
-                        </div>
-                        <form action="index.html">
-                            <label for="prix">
-                                <input type="text" name="prix" id="prix">
-                            </label>
-                            <input type="submit" value="save">
-                        </form>
                     </article>
-                    <article class="timbre">
-                        <div class="img-avec-favoris">
-                            <img class="timbre-image" src="#" alt="image d'un timbre">
-                            <input class="timbre-favoris" type="checkbox" name="favoris" id="favoris">
+                    <article class="carte">
+                        <div class="carte-img-avec-favoris">
+                            <img class="carte-timbre-image" src="assets/img/nicolas-timbre" alt="image d'un timbre">
+                            <!-- FIXME: faire intégration favoris avec label -->
+                            <input class="carte-timbre-favoris" type="checkbox" name="favoris" id="favoris">
                         </div>
-                        <div class="txt-enchere-ligne">
-                            <p class="timbre-status">Enchères en cours</p>
-                            <p class="timbre-lot">Lot n: 123456</p>
+                        <div class="carte-zone-txt">
+                            <div class="txt-enchere-ligne">
+                                <p class="timbre-status">Enchères en cours</p>
+                                <p class="timbre-lot">Lot n: 123456</p>
+                            </div>
+                            <div class="entete-enchere">
+                                <h3 class="timbre-titre">Nom du timbres</h3>
+                                <div>
+                                    <p class="timbre-annee">1850-1890</p>
+                                    <p class="timbre-etat">État : Neuf</p>
+                                </div>
+                            </div>
+                            <div class="txt-enchere-ligne">
+                                <p class="timbre-prix">650 $</p>
+                                <p class="timbre-temps-restant">3 jours 21 heures</p>
+                            </div>
+                            <form action="index.html">
+                                <label for="prix">
+                                    <input type="text" name="prix" id="prix" class="input-selection variante-bleu">
+                                </label>
+                                <input type="submit" value="save">
+                            </form>
                         </div>
-                        <div class="entete-enchere">
-                            <h3 class="timbre-titre">nom du timbres</h3>
-                            <p class="timbre-annee">1850-1890</p>
-                            <p class="timbre-etat">État : Neuf</p>
+                    </article>
+                    <article class="carte">
+                        <div class="carte-img-avec-favoris">
+                            <img class="carte-timbre-image" src="assets/img/nicolas-timbre" alt="image d'un timbre">
+                            <!-- FIXME: faire intégration favoris avec label -->
+                            <input class="carte-timbre-favoris" type="checkbox" name="favoris" id="favoris">
                         </div>
-                        <div class="txt-enchere-ligne">
-                            <p class="timbre-prix">Prix actuel : </p>
-                            <p class="timbre-temps-restant">temps restant : </p>
+                        <div class="carte-zone-txt">
+                            <div class="txt-enchere-ligne">
+                                <p class="timbre-status">Enchères en cours</p>
+                                <p class="timbre-lot">Lot n: 123456</p>
+                            </div>
+                            <div class="entete-enchere">
+                                <h3 class="timbre-titre">Nom du timbres</h3>
+                                <div>
+                                    <p class="timbre-annee">1850-1890</p>
+                                    <p class="timbre-etat">État : Neuf</p>
+                                </div>
+                            </div>
+                            <div class="txt-enchere-ligne">
+                                <p class="timbre-prix">650 $</p>
+                                <p class="timbre-temps-restant">3 jours 21 heures</p>
+                            </div>
+                            <form action="index.html">
+                                <label for="prix">
+                                    <input type="text" name="prix" id="prix" class="input-selection variante-bleu">
+                                </label>
+                                <input type="submit" value="save">
+                            </form>
                         </div>
-                        <form action="index.html">
-                            <label for="prix">
-                                <input type="text" name="prix" id="prix">
-                            </label>
-                            <input type="submit" value="save">
-                        </form>
                     </article>
                 </div>
             </section>
