adapte mobile view footer & header

--- a/fiche-detaillee/index.html
+++ b/fiche-detaillee/index.html
@@ -178,7 +178,7 @@
                     </article>
                 </div>
                 <div class="grd-img-petites-img">
-                    <img src="/assets/img/fiche-img-1.jpg" alt="image fiche" class="zoomEffet">
+                    <dialog open><img src="/assets/img/fiche-img-1.jpg" alt="image fiche" class="zoomEffet"></dialog>
                     <div class="panneau-controle-img">
                         <span>Survoler pour zoomer</span>
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
